# analyzing-books

./: .gitignore  README.md  pyproject.toml
datasets/: to_read.csv
src/: attribute_names.py  books_dataset.py  columns.py  data_cleaning.py  data_ingestion.py  data_transformation.py  reporting.py  run_pipeline.py  schemas.py
tests/: conftest.py  test_data_loading.py  test_data_transfomation.py  test_reporting.py  test_run_pipeline.py
tests/data/: book_tags.csv  books.csv  ratings.csv  tags.csv
